<resources>
    <string name="app_name">Cash</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="singin">SING IN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="saldo">Saldo</string>
    <string name="botonflotante">botonFlotante</string>
    <string name="fecha">Abril 2021</string>
    <string name="s1">$1,200.00</string>
    <string name="s2">$500.00</string>
    <string name="s3">$700.00</string>
    <string name="btn">btn</string>
    <string name="tran">Detalles de los ingresos</string>
    <string name="trang">Detalles de los gastos</string>
    <string name="num">Número de transacciones</string>
    <string name="cant">Cantidad total de ingresos</string>
    <string name="cantg">Cantidad total de gastos</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="sueldo">Sueldo</string>
    <string name="deposito">Depósito</string>
    <string name="ahorro">Ahorros</string>
    <string name="general">General</string>
    <string name="salud">Salud</string>
    <string name="facturas">Facturas</string>
    <string name="transporte">Transporte</string>
    <string name="i1">$800.00</string>
    <string name="i2">$300.00</string>
    <string name="i3">$100.00</string>
    <string name="g1">$200.00</string>
    <string name="g2">$100.00</string>
    <string name="g3">$50.00</string>
    <string name="g4">$150.00</string>
    <string name="todo">TODO</string>
</resources>