<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/ct"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/trang"
                    android:textAlignment="textStart"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/fecha"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/borde"
                android:orientation="vertical"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".5"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/general"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bar" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:background="@drawable/boton"
                            android:backgroundTint="@color/beige"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_general" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ProgressBar
                                android:id="@+id/progressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:progress="40"
                                android:progressTint="@color/beige" />

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/g1"
                                android:textColor="@color/text"
                                android:textSize="@dimen/fecha" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".5"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/transporte"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bar" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:background="@drawable/boton"
                            android:backgroundTint="@color/gris"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_transporte" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ProgressBar
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:progress="20"
                                android:progressTint="@color/gris" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/g2"
                                android:textColor="@color/text"
                                android:textSize="@dimen/fecha" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".5"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/salud"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bar" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:background="@drawable/boton"
                            android:backgroundTint="@color/verde"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_salud" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ProgressBar
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:progress="10"
                                android:progressTint="@color/verde" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/g3"
                                android:textColor="@color/text"
                                android:textSize="@dimen/fecha" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight=".5"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:text="@string/facturas"
                            android:textColor="@color/black"
                            android:textSize="@dimen/bar" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:background="@drawable/boton"
                            android:backgroundTint="@color/rosa"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_facturas" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <ProgressBar
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:progress="30"
                                android:progressTint="@color/rosa" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/g4"
                                android:textColor="@color/text"
                                android:textSize="@dimen/fecha" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/ct"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/num"
                    android:textAlignment="textStart"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cuatro"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/ct"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/cantg"
                    android:textAlignment="textStart"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/s2"
                    android:textAlignment="textEnd"
                    android:textColor="@color/text"
                    android:textSize="@dimen/bar" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/r"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            app:itemIconTint="@color/white"
            app:itemBackground="@android:color/transparent"
            android:background="@android:color/transparent"
            app:itemTextColor="@color/white"
            app:menu="@menu/app_bar_menu"
            />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/a"
        android:contentDescription="@string/botonflotante"
        android:src="@drawable/ic_money"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="35dp"
        app:tint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>